# target/generated-sources/openapi/src/main/java/api/generated/tramways/inbound/model/AnalysisType.java
@@ -6,19 +6,14 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.util.ArrayList;
-import java.util.List;
-import tramways.inbound.model.Property;
 import javax.validation.constraints.*;
 import io.swagger.annotations.*;
 
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaResteasyServerCodegen", date = "2020-05-08T22:58:22.447039+02:00[Europe/Berlin]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaResteasyServerCodegen", date = "2020-06-08T22:53:33.850861900+02:00[Europe/Berlin]")
 public class AnalysisType   {
   
   private String id;
   private String name;
-  private String warning;
-  private List<Property> parameters = new ArrayList<Property>();
 
   /**
    **/
@@ -44,30 +39,6 @@ public class AnalysisType   {
     this.name = name;
   }
 
-  /**
-   **/
-  
-  @ApiModelProperty(value = "")
-  @JsonProperty("warning")
-  public String getWarning() {
-    return warning;
-  }
-  public void setWarning(String warning) {
-    this.warning = warning;
-  }
-
-  /**
-   **/
-  
-  @ApiModelProperty(value = "")
-  @JsonProperty("parameters")
-  public List<Property> getParameters() {
-    return parameters;
-  }
-  public void setParameters(List<Property> parameters) {
-    this.parameters = parameters;
-  }
-
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -79,14 +50,12 @@ public class AnalysisType   {
     }
     AnalysisType analysisType = (AnalysisType) o;
     return Objects.equals(id, analysisType.id) &&
-        Objects.equals(name, analysisType.name) &&
-        Objects.equals(warning, analysisType.warning) &&
-        Objects.equals(parameters, analysisType.parameters);
+        Objects.equals(name, analysisType.name);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, name, warning, parameters);
+    return Objects.hash(id, name);
   }
 
   @Override
@@ -96,8 +65,6 @@ public class AnalysisType   {
     
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
-    sb.append("    warning: ").append(toIndentedString(warning)).append("\n");
-    sb.append("    parameters: ").append(toIndentedString(parameters)).append("\n");
     sb.append("}");
     return sb.toString();
   }
